add email and docker-compose for production

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ POSTGRES_USR=metabase
 POSTGRES_PWD=justpassword
 POSTGRES_DB=metabase
 
+MB_EMAIL_FROM_ADDRESS=email@example.com
+MB_EMAIL_SMTP_HOST=smtp.example.com
+MB_EMAIL_SMTP_PASSWORD=password
+MB_EMAIL_SMTP_PORT=587
+MB_EMAIL_SMTP_SECURIT=ssl
+MB_EMAIL_SMTP_USERNAME=email@example.com
